--- a/_sass/base/typo.scss
+++ b/_sass/base/typo.scss
@@ -13,6 +13,7 @@ blockquote::before {
     width: 5rem;
 }
 
+h1, h2, h3, h4, h5,
 .smallcaps {
     font-family: "Alegreya Sans SC", "Georgia", serif;
     letter-spacing: 0.025rem;
@@ -74,8 +75,8 @@ ol, ul {
 ul { list-style: none; }
 
 h1, h2, h3, h4, h5 {
-    font-family: "Cormorant Garamond", "Georgia", serif;
-    line-height: 1.125;
+    font-weight: 400;
+    line-height: 0.75;
     margin-bottom: 0.4125rem;
     margin-top: 0;
 }
@@ -106,7 +107,11 @@ h5 { font-size: 1.1487rem; }
 article h2,
 article h3,
 article h4,
-article h5 { padding-top: 1.5rem; }
+article h5 {
+    margin-bottom: 0;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
 
 article p { text-indent: 1.25rem; }
 
