--- a/_sass/base/typo.scss
+++ b/_sass/base/typo.scss
@@ -83,7 +83,8 @@ h1, h2, h3, h4, h5 {
 
 h1 {
     font-size: 2rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    margin-top: 0.75rem;
 }
 
 h2 { font-size: 1.7411rem; }
@@ -114,7 +115,7 @@ article h5 {
     padding-top: 1rem;
 }
 
-article p { text-indent: 1.25rem; }
+article p { text-indent: 2rem; }
 
 article p:first-of-type,
 article h1 + p,
